[gd_scene load_steps=16 format=3 uid="uid://cxw48rle83veb"]

[ext_resource type="Texture2D" uid="uid://bbjwna7dqivjw" path="res://assets/art/spritesheet_dancer.png" id="1_pgqdd"]
[ext_resource type="Script" path="res://scripts/dancing/dancer/npc_dancer.gd" id="2_h8eny"]
[ext_resource type="Script" path="res://btn_map_wheel.gd" id="3_38rpx"]
[ext_resource type="Texture2D" uid="uid://bd6c0ppfryfih" path="res://assets/art/btn_keyboard.png" id="4_8vexq"]

[sub_resource type="Animation" id="Animation_lfedq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ewhgh"]
resource_name = "bow"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 18, 17, 16, 15]
}

[sub_resource type="Animation" id="Animation_yg5rl"]
resource_name = "cooldown"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 14, 15]
}

[sub_resource type="Animation" id="Animation_vaxqd"]
resource_name = "idle"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 4, 0, 5, 6, 7, 6, 5]
}

[sub_resource type="Animation" id="Animation_ponb5"]
resource_name = "remember"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_ihl27"]
resource_name = "step_down"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.25, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 35, 37, 38, 39, 38, 15]
}

[sub_resource type="Animation" id="Animation_dhxlx"]
resource_name = "step_error"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [42, 41]
}

[sub_resource type="Animation" id="Animation_w55wg"]
resource_name = "step_left"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 22, 21, 15]
}

[sub_resource type="Animation" id="Animation_k84sk"]
resource_name = "step_right"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 26, 25, 15]
}

[sub_resource type="Animation" id="Animation_7sps6"]
resource_name = "step_up"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33, 30, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f0p1f"]
_data = {
"RESET": SubResource("Animation_lfedq"),
"bow": SubResource("Animation_ewhgh"),
"cooldown": SubResource("Animation_yg5rl"),
"idle": SubResource("Animation_vaxqd"),
"remember": SubResource("Animation_ponb5"),
"step_down": SubResource("Animation_ihl27"),
"step_error": SubResource("Animation_dhxlx"),
"step_left": SubResource("Animation_w55wg"),
"step_right": SubResource("Animation_k84sk"),
"step_up": SubResource("Animation_7sps6")
}

[node name="NpcDancer" type="Sprite2D"]
texture = ExtResource("1_pgqdd")
hframes = 7
vframes = 7
script = ExtResource("2_h8eny")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f0p1f")
}
autoplay = "idle"

[node name="BtnMapWheel" type="Node2D" parent="."]
script = ExtResource("3_38rpx")

[node name="BtnTopSprite2D" type="Sprite2D" parent="BtnMapWheel"]
position = Vector2(0, -32)
texture = ExtResource("4_8vexq")
hframes = 5
frame = 4

[node name="BtnBottomSprite2D" type="Sprite2D" parent="BtnMapWheel"]
position = Vector2(0, 32)
texture = ExtResource("4_8vexq")
hframes = 5
frame = 4

[node name="BtnLeftSprite2D" type="Sprite2D" parent="BtnMapWheel"]
position = Vector2(-32, 0)
texture = ExtResource("4_8vexq")
hframes = 5
frame = 4

[node name="BtnRightSprite2D" type="Sprite2D" parent="BtnMapWheel"]
position = Vector2(32, 0)
texture = ExtResource("4_8vexq")
hframes = 5
frame = 4

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
